force-app/main/default/objects/Payment__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>Customer code that ties this payment back to the Account (mirrors Account.Customer_Code__c).</description>
    <label>Customer Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>