force-app/main/default/objects/Payment__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer display name as it appears on the source-system document. Denormalised so the payment carries the customer label even if the related Account is later renamed.</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>