force-app/main/default/objects/Payment__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <description>Source-system document number (e.g. SAP receipt no).</description>
    <label>Document No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>