force-app/main/default/objects/Payment__c/fields/Last_ERP_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ERP_Sync_Date__c</fullName>
    <description>Stamped to now() each time SAP pushes data into this Payment.</description>
    <label>Last ERP Sync Date</label>
    <type>DateTime</type>
</CustomField>