force-app/main/default/objects/Payment__c/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <description>External payment identifier from the source system (e.g. SAP). Used as the integration key for upserts.</description>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>