force-app/main/default/objects/Payment__c/fields/PaymentId__c.field-meta.xml
<CustomField>
    <fullName>PaymentId__c</fullName>
    <description>External payment identifier from the source system (e.g. SAP). Used as the upsert key by the /payment REST endpoint.</description>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>