force-app/main/default/objects/Payment__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>External reference (cheque no, UTR, transaction id) the customer / bank gave for the payment.</description>
    <label>Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>